# docsonnet

./: .gitignore  .goreleaser.yaml  BUILD.bazel  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE  building.md  doc-util.libsonnet  go.mod  go.sum  load.libsonnet  main.go  main_test.go  markdown.go  pkged.go  render.go  render.libsonnet  repositories.bzl
.github/workflows/: docker.yml  go-release.yml  go-releaser.yml
doc-util/: Makefile  README.md  docs.jsonnet  main.docsonnet  main.libsonnet  render.libsonnet  test.jsonnet
doc-util/docs/: d.md
fast/: fast.libsonnet  main.go
pkg/comments/: comments.go  dsl.libsonnet
pkg/docsonnet/: BUILD.bazel  fast.go  field.go  field_test.go  load.go  load.libsonnet  model.go
pkg/md/: BUILD.bazel  md.go  md_test.go
pkg/render/: BUILD.bazel  fs.go  paths.go  render.go  render_test.go
pkg/slug/: BUILD.bazel  slug.go  slug_test.go
