load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jsonnet-libs/docsonnet
gazelle(name = "gazelle")

go_library(
    name = "docsonnet_lib",
    srcs = ["main.go"],
    importpath = "github.com/jsonnet-libs/docsonnet",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/docsonnet",
        "//pkg/render",
        "@com_github_go_clix_cli//:go_default_library",
    ],
)

go_binary(
    name = "docsonnet",
    embed = [":docsonnet_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "docsonnet-docker",
    embed = [":docsonnet_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

docker_push(
   name = "docsonnet-docker-push",
   image = ":docsonnet-docker",
   registry = "docker.io",
   repository = "xvzf/docsonnet",
   tag = "amd64",
)
